[gd_scene load_steps=12 format=2]

[ext_resource path="res://Test/test_bg.png" type="Texture" id=1]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Test/Purifying/PurifyingWordDock.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 180 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 180 )
modulate_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 180 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 180 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 180 )

[sub_resource type="DynamicFont" id=6]
extra_spacing_top = -8
extra_spacing_bottom = -7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
extra_spacing_top = -5
extra_spacing_bottom = -7
font_data = ExtResource( 2 )

[node name="PurifyingWordDock" type="Node2D"]
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = -64.0
margin_top = -21.0
margin_right = 60.0
margin_bottom = 23.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="Label" parent="."]
margin_left = -55.0
margin_top = -20.0
margin_right = 53.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "English Definition (this is an English definition)"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -52.1029
margin_top = -5.46846
margin_right = 53.8971
margin_bottom = 22.5315
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "โลหะปราสาท"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 49.2802
margin_top = -6.25702
margin_right = 68.2802
margin_bottom = 9.74298
custom_fonts/font = SubResource( 8 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
